
    <resources>
        <string name="app_name">RainGuardApp</string>
        <string name="Button1">Далі</string>
        <string name="Button2">Готово</string>
        <string name="Text1">Виберіть область</string>
        <string name="Text2">Виберіть місто</string>
        <string name="Button3">Назад</string>
        <string name="Button8">Метрична</string>
        <string name="Button9">Англійська</string>
        <string name="Button12">English</string>
        <string name="Button13">Українська</string>
        <string name="Button14">Так</string>
        <string name="Button15">Ні</string>
        <string name="Text12">Одиниці виміру</string>
        <string name="Text14">Мова</string>
        <string name="Text15">Увімкнути сповіщення про надзвичайні ситуації</string>
        <string name="Button16">Обрати інше місто</string>
        <string name="Button17">Сповістити про проблему</string>
        <string name="Button18">Баняс Володимир Володимирович – UI/UX Designer,
Теслевич Михайло Іванович – developer,
Шишканич Тетяна Вадимівна – team leader, developer
Дані взято з сайту openweathermap.org (https://openweathermap.org/current)</string>
        <string name="reportText">Опишіть вашу проблему</string>
        <string name="enteryourEmail">Введіть вашу електронну пошту</string>
        <string name="readyReportButton">Дякуємо за інформацію</string>
        <string name="TemMin">Мін. темп. </string>
        <string name="TemMax">Макс. темп. </string>
        <string name="wind">Вітер</string>
        <string name="sunrise">Cхід сонця</string>
        <string name="sunset">Захід сонця</string>
        <string name="humidity">Вологість</string>
        <string name="pressure">Тиск</string>
        <string name="ShowMore">Показати Більше</string>
        <string name="TempMin5">Мінінімальна температура:</string>
        <string name="TempMax5">Максимальна температура:</string>
        <string name="Sunny">Сонячно</string>
        <string name="Wrong">Щось пішло не так</string>

    </resources>
