<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".LocationsCity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text2"
            android:textColor="#052C44"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#D6D6D6"
            android:layout_marginTop="30dp"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/button"
            android:onClick="Start"
            android:text="@string/Button2"
            android:textColor="@color/black"
            android:layout_marginTop="370dp"
            />



        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/button"
            android:layout_marginTop="30dp"
            android:onClick="Back"
            android:text="@string/Button3"
            android:textColor="@color/black"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>